# roomkit-ui

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  entitlements.plist  pyproject.toml
.github/workflows/: build.yml  ci.yml
scripts/: build_app.sh  generate_icons.py
src/room_ui/: __init__.py  __main__.py  app.py  builtin_tools.py  cleanup.py  engine.py  hotkey.py  icons.py  mcp_app_bridge.py  mcp_manager.py  model_manager.py  settings.py  stt_engine.py  theme.py  tray.py
src/room_ui/widgets/: chat_bubble.py  chat_view.py  control_bar.py  dictation_log.py  hotkey_button.py  main_window.py  mcp_app_widget.py  session_info.py  settings_panel.py  vu_meter.py
src/roomkit_ui/: __main__.py  app.py  builtin_tools.py  clawhub_client.py  cleanup.py  engine.py  enrollment.py  hooks.py  hotkey.py  icons.py  mcp_app_bridge.py  mcp_auth.py  mcp_manager.py  model_manager.py  settings.py  skill_manager.py  sounds.py  speaker_manager.py  stt_engine.py  theme.py  tray.py  watchdog.py
src/roomkit_ui/assets/: icon.icns
src/roomkit_ui/providers/: __init__.py  anthropic.py  gemini.py  local.py  openai.py
src/roomkit_ui/tts/: __init__.py  _util.py  elevenlabs.py  gradium.py  neutts.py  piper.py  qwen3.py
src/roomkit_ui/widgets/: chat_bubble.py  chat_view.py  control_bar.py  dictation_log.py  hotkey_button.py  main_window.py  mcp_app_widget.py  session_info.py  settings_panel.py  vu_meter.py
src/roomkit_ui/widgets/settings/: __init__.py  about_page.py  ai_page.py  attitudes_page.py  audio_debug_page.py  constants.py  dictation_page.py  general_page.py  mcp_page.py  models_page.py  panel.py  realtime_section.py  skills_page.py  speakers_page.py  telemetry_page.py  vc_cloud_fields.py  vc_local_fields.py
src/roomkit_ui/widgets/settings/skills/: __init__.py  marketplace.py  my_skills.py  page.py  widgets.py
