[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "room-ui"
version = "0.1.0"
description = "Voice Assistant — PySide6 desktop app wrapping roomkit"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "qasync>=0.27",
    "roomkit[realtime-gemini,realtime-openai,local-audio,webrtc-aec]",
    "pynput>=1.7",
    "mcp>=1.0",
    "markdown-it-py>=3.0",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0"]

[project.scripts]
room-ui = "room_ui.app:main"
